--- a/src/screens/App.css
+++ b/src/screens/App.css
@@ -1,5 +1,21 @@
 .App {
-  text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: 'row';
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.navBar {
+  flex-basis: 20vw;
+  background-color: aqua;
+  
+}
+
+.navBarListObject {
+  height: 10vh;
+  text-decoration: none;
 }
 
 .App-logo {
@@ -13,20 +29,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
