Feat: Added versioning display

--- a/src/screens/App.css
+++ b/src/screens/App.css
@@ -9,13 +9,22 @@
 
 .navBar {
   flex-basis: 20vw;
-  background-color: aqua;
-  
+  margin-right: 2vw;
+  display: flex;
+  flex-direction:column;
+  justify-content: space-between;
 }
 
 .navBarListObject {
   height: 10vh;
   text-decoration: none;
+}
+
+.versionBox {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 2vh;
+  padding-left: 2vh;
 }
 
 .App-logo {
