Style: Added inidivdual button styles

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -11,7 +11,10 @@
 .navBarListObject {
   height: 10vh;
   text-decoration: none;
+  display:flex;
+  flex-direction: 'row';
 }
+
 
 .versionBox {
   display: flex;
