Feature: Completed wallet list item

--- a/src/components/walletSelection/walletListItem/walletListItem.css
+++ b/src/components/walletSelection/walletListItem/walletListItem.css
@@ -1,3 +1,18 @@
 .walletListItem {
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 5px;
+
+}
+
+.walletTextData {
+  display: flex;
+  flex-direction: column;
+}
+
+.walletTick {
+  align-self: center;
 }
